--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
         <div class="container d-flex align-items-center">
 
             <h1 class="logo mr-auto">
-                <a href="https://www.linkedin.com/company/mindssocial/"><img src="C:\Users\satwi\Desktop\MINDS Web\assets\img\Blue Logo.png" style="padding-right: 17px;"></a><a href="https://www.linkedin.com/company/mindssocial/">M.I.N.D.S.</a></h1>
+                <a href="https://www.linkedin.com/company/mindssocial/"><img src="assets\img\Blue Logo.png" style="padding-right: 10px;"></a><a href="https://www.linkedin.com/company/mindssocial/">M.I.N.D.S.</a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt=""></a>-->
-
+            <a href="https://linktr.ee/mindssocial"><span>Register</span></a>
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Network</a></li>
                     <!-- <li><a href="#portfolio">Portfolio</a></li> -->
-                    <li><a href="#team">Our Team</a></li>
+                    <!-- <li><a href="#team">Our Team</a></li> -->
                     <!-- <li class="drop-down"><a href="">Drop Down</a>
                         <ul>
                             <li><a href="#">Drop Down 1</a></li>
@@ -102,7 +102,7 @@
   <main id="main">
 
     <!-- ======= Featured Services Section ======= -->
-    <!-- <section id="featured-services" class="featured-services">
+    <section id="featured-services" class="featured-services">
       <div class="container" data-aos="fade-up">
 
         <div class="row">
@@ -141,7 +141,7 @@
         </div>
 
       </div>
-    </section>End Featured Services Section -->
+    </section>
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about section-bg">
@@ -149,7 +149,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <h3>Find Out More <span>About Us</span></h3>
+          <h3>What is <span>M.I.N.D.S.?</span></h3>
                 <p></p>
         </div>
 
@@ -167,6 +167,53 @@
     </section>
     <!-- End About Section -->
 
+    <!-- <section id="about" class="about section-bg">
+        <div class="container" data-aos="fade-up">
+  
+          <div class="section-title">
+            <h2>About</h2>
+            <h3>Find Out More <span>About Us</span></h3>
+            <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          </div>
+  
+          <div class="row">
+            <div class="col-lg-6" data-aos="zoom-out" data-aos-delay="100">
+              <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
+              <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+              <p class="font-italic">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                magna aliqua.
+              </p>
+              <ul>
+                <li>
+                  <i class="bx bx-store-alt"></i>
+                  <div>
+                    <h5>Ullamco laboris nisi ut aliquip consequat</h5>
+                    <p>Magni facilis facilis repellendus cum excepturi quaerat praesentium libre trade</p>
+                  </div>
+                </li>
+                <li>
+                  <i class="bx bx-images"></i>
+                  <div>
+                    <h5>Magnam soluta odio exercitationem reprehenderi</h5>
+                    <p>Quo totam dolorum at pariatur aut distinctio dolorum laudantium illo direna pasata redi</p>
+                  </div>
+                </li>
+              </ul>
+              <p>
+                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                culpa qui officia deserunt mollit anim id est laborum
+              </p>
+            </div>
+          </div>
+  
+        </div>
+      </section>End About Section -->
+
+
     <!-- ======= Skills Section ======= -->
     <!-- <section id="skills" class="skills">
         <div class="container" data-aos="fade-up">
@@ -177,53 +224,53 @@
 
                     <div class="progress">
                         <span class="skill">HTML <i class="val">100%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-
-                    <div class="progress">
-                        <span class="skill">CSS <i class="val">90%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-
-                    <div class="progress">
-                        <span class="skill">JavaScript <i class="val">75%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-
+                <div class="progress-bar-wrap">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
+        </div>
 
-                <div class="col-lg-6">
-
-                    <div class="progress">
-                        <span class="skill">PHP <i class="val">80%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-
-                    <div class="progress">
-                        <span class="skill">WordPress/CMS <i class="val">90%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-
-                    <div class="progress">
-                        <span class="skill">Photoshop <i class="val">55%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-
-                </div>
-
+        <div class="progress">
+            <span class="skill">CSS <i class="val">90%</i></span>
+            <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
+        </div>
+
+        <div class="progress">
+            <span class="skill">JavaScript <i class="val">75%</i></span>
+            <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+        </div>
+
+        </div>
+
+        <div class="col-lg-6">
+
+            <div class="progress">
+                <span class="skill">PHP <i class="val">80%</i></span>
+                <div class="progress-bar-wrap">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </div>
+
+            <div class="progress">
+                <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+                <div class="progress-bar-wrap">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </div>
+
+            <div class="progress">
+                <span class="skill">Photoshop <i class="val">55%</i></span>
+                <div class="progress-bar-wrap">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </div>
+
+        </div>
+
+        </div>
 
         </div>
     </section> -->
@@ -315,32 +362,32 @@
 
             <div class="section-title">
                 <h2>Network</h2>
-                <h3>Our <span>Network</span></h3>
-                <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+                <h3>Join the <span>Community</span></h3>
+                <p></p>
             </div>
 
             <div class="row">
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                     <div class="icon-box">
-                        <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                        <h4><a href="">Mentors</a></h4>
-                        <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                        <div class="icon"><i class="bx bxs-user-voice"></i></div>
+                        <h4><a href="http://bit.ly/MINDSMentor">Mentors</a></h4>
+                        <p>The backbone of the network, driving transfer of knowledge to the members of the commumity.</p>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                     <div class="icon-box">
-                        <div class="icon"><i class="bx bx-file"></i></div>
-                        <h4><a href="">Mentees</a></h4>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                        <div class="icon"><i class="bx bxs-user-detail"></i></div>
+                        <h4><a href="http://bit.ly/MINDSMentee">Mentees</a></h4>
+                        <p>Join to become the receivers of constant guidance and a truckload of opportunities to develop and grow, personally and professionally.</p>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
                     <div class="icon-box">
-                        <div class="icon"><i class="bx bx-tachometer"></i></div>
-                        <h4><a href="">Volunteers</a></h4>
-                        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                        <div class="icon"><i class="bx bx-group"></i></div>
+                        <h4><a href="http://bit.ly/MINDSVolunteer">Volunteers</a></h4>
+                        <p>Get ample opportunity to learn, grow and progress and enable both personal and organization's growth.</p>
                     </div>
                 </div>
             </div>
@@ -350,69 +397,34 @@
     <!-- End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <!-- <section id="testimonials" class="testimonials">
+    <section id="testimonials" class="testimonials">
         <div class="container" data-aos="zoom-in">
 
             <div class="owl-carousel testimonials-carousel">
 
-                <div class="testimonial-item">
-                    <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                    <h3>Saul Goodman</h3>
-                    <h4>Ceo &amp; Founder</h4>
-                    <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i> Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at
-                        semper.
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                    </p>
+                <div class="testimonial-item row">
+                    <img src="assets/img/testimonials/SRCC.jpeg" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/SSCBS.jpg" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/HINDU.png" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/DTU.png" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/STEPHENS.png" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/HANSRAJ.png" class="testimonial-img" alt="">
                 </div>
 
-                <div class="testimonial-item">
-                    <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                    <h3>Sara Wilsson</h3>
-                    <h4>Designer</h4>
-                    <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i> Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam
-                        anim culpa.
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                    </p>
-                </div>
-
-                <div class="testimonial-item">
-                    <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                    <h3>Jena Karlis</h3>
-                    <h4>Store Owner</h4>
-                    <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i> Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                    </p>
-                </div>
-
-                <div class="testimonial-item">
-                    <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                    <h3>Matt Brandon</h3>
-                    <h4>Freelancer</h4>
-                    <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i> Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore
-                        illum veniam.
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                    </p>
-                </div>
-
-                <div class="testimonial-item">
-                    <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                    <h3>John Larson</h3>
-                    <h4>Entrepreneur</h4>
-                    <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i> Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa
-                        fore nisi cillum quid.
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                    </p>
+                <div class="testimonial-item row">
+                    <img src="assets/img/testimonials/SGGSCC.png" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/RAMJAS.jpeg" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/JMI.png" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/SBSC.jpg" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/SGTBKC.png" class="testimonial-img" alt="">
+                    <img src="assets/img/testimonials/DRC.png" class="testimonial-img" alt="">
                 </div>
 
             </div>
 
         </div>
-    </section> -->
+        <p style="color: white; text-align: center; margin-top: 20px; margin-right: 100px; margin-left: 100px; font-size: 15px;">The depicted logos are not meant to show any official alliance with the said institutions, but are, in all its intention, a mere representation of the network's footprint within the student community.</p>
+    </section>
     <!-- End Testimonials Section -->
 
     <!-- ======= Portfolio Section ======= -->
@@ -535,7 +547,7 @@
     <!-- End Portfolio Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team" class="team section-bg">
+    <!-- <section id="team" class="team section-bg">
         <div class="container" data-aos="fade-up">
 
             <div class="section-title">
@@ -616,7 +628,7 @@
             </div>
 
         </div>
-    </section>
+    </section> -->
     <!-- End Team Section -->
 
     <!-- ======= Frequently Asked Questions Section ======= -->
@@ -708,7 +720,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="info-box  mb-4">
                         <i class="bx bx-envelope"></i>
-                        <h3>Email Us</h3>
+                        <!-- <h3>Email Us</h3> -->
                         <p>networkingwithminds@gmail.com</p>
                     </div>
                 </div>
@@ -716,7 +728,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="info-box  mb-4">
                         <i class="bx bx-phone-call"></i>
-                        <h3>Call Us</h3>
+                        <!-- <h3>Call Us</h3> -->
                         <p>+91 80768 89032</p>
                     </div>
                 </div>
@@ -767,7 +779,7 @@
 
         <div class="footer-top">
             <div class="container">
-                <div class="row justify-content-center">
+                <div class="row">
                     <div class="col-lg-3 col-md-6 footer-links">
                         <div class="social-links mt-3">
                             <a href="https://www.instagram.com/minds.social/" class="instagram"><i class="bx bxl-instagram"></i></a>
