Register button fix

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 <a href="https://www.linkedin.com/company/mindssocial/"><img src="assets\img\Blue Logo.png" style="padding-right: 10px;"></a><a href="https://www.linkedin.com/company/mindssocial/">M.I.N.D.S.</a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt=""></a>-->
-            <a href="https://linktr.ee/mindssocial"><span>Register</span></a>
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
+                    <li><a href="https://linktr.ee/mindssocial">Register</a></li>
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Network</a></li>
@@ -423,7 +423,7 @@
             </div>
 
         </div>
-        <p style="color: white; text-align: center; margin-top: 20px; margin-right: 100px; margin-left: 100px; font-size: 15px;">The depicted logos are not meant to show any official alliance with the said institutions, but are, in all its intention, a mere representation of the network's footprint within the student community.</p>
+        <p style="color: white; text-align: center; margin-top: 20px; font-size: 15px;">The depicted logos are not meant to show any official alliance with the said institutions, but are, in all its intention, a mere representation of the network's footprint within the student community.</p>
     </section>
     <!-- End Testimonials Section -->
 
