Added contact details

--- a/index.html
+++ b/index.html
@@ -777,15 +777,44 @@
     <!-- ======= Footer ======= -->
     <footer id="footer">
 
-        <div class="footer-top">
+        <div class="footer-top section-bg">
             <div class="container">
                 <div class="row">
+                    <div class="col-lg-3 col-md-6 footer-contact">
+                        <h3>Contact Details</h3>
+                        <p>
+                            Divjas Sarna <br> Founder <br><br>
+                            <strong>Phone:</strong> +91 80768 89032<br>
+                            <strong>Email:</strong> divjassarna@gmail.com<br>
+                        </p>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 footer-contact">
+                        <h3><br></h3>
+                        <p>
+                            Satwik Dudeja <br> Co-Founder <br><br>
+                            <strong>Phone:</strong> +91 96500 86966<br>
+                            <strong>Email:</strong> satwikdudeja@gmail.com<br>
+                        </p>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 footer-contact">
+                        <h3><br></h3>
+                        <p>
+                            Aditya Mahajan <br> Vice-President <br><br>
+                            <strong>Phone:</strong> +91 98716 94151<br>
+                            <strong>Email:</strong> proVP@gmail.com<br>
+                        </p>
+                    </div>
+
                     <div class="col-lg-3 col-md-6 footer-links">
+                        <h4>Our Social Networks</h4>
                         <div class="social-links mt-3">
                             <a href="https://www.instagram.com/minds.social/" class="instagram"><i class="bx bxl-instagram"></i></a>
                             <a href="https://www.linkedin.com/company/mindssocial/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
