--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <i class="icofont-phone"></i> +91 80768 89032
             </div>
             <div class="social-links">
-                <a href="https://www.instagram.com/minds.social/" class="instagram"><i class="icofont-instagram"></i></a>
                 <a href="https://www.linkedin.com/company/mindssocial/" class="linkedin"><i class="icofont-linkedin"></i></i></a>
+                <a href="https://www.instagram.com/minds.social/" class="instagram"><i class="icofont-instagram"></i></a>
             </div>
         </div>
     </div>
@@ -105,41 +105,43 @@
     <section id="featured-services" class="featured-services">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
-            <h2>Network</h2>
-            <h3>Join the <span>Community</span></h3>
+            <h2>Perks</h2>
+            <h3>Why <span>M.I.N.D.S.?</span></h3>
                 <p></p>
         </div>
 
         <div class="row">
             <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-                    <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                    <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-                    <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                    <div class="icon"><i class="bx bx-world"></i></div>
+                    <h4 class="title"><a href="">Networking</a></h4>
+                    <p class="description">Expand personal network and leverage M.I.N.D.S.' reach to accelerate your career journey.</p>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
                     <div class="icon"><i class="bx bx-file"></i></div>
-                    <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-                    <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                    <h4 class="title"><a href="">Skill Development</a></h4>
+                    <p class="description">Encouraging a systematic flow of skills, knowledge and experience within the community.</p>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
-                    <div class="icon"><i class="bx bx-tachometer"></i></div>
-                    <h4 class="title"><a href="">Magni Dolores</a></h4>
-                    <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                    <div class="icon"><i class="bx bx-planet"></i></div>
+                    <h4 class="title">
+                        <a href="">Cost-Free Association</a>
+                    </h4>
+                    <p class="description">As a social impact network, our sole motive is to work for students welfare with no attached economic motive.</p>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
-                    <div class="icon"><i class="bx bx-world"></i></div>
-                    <h4 class="title"><a href="">Nemo Enim</a></h4>
-                    <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+                    <div class="icon"><i class="bx bx-network-chart"></i></div>
+                    <h4 class="title"><a href="">Distinct Features</a></h4>
+                    <p class="description">A continuous learning avenue, cutting across different subjects and domains to provide quality mentorship.</p>
                 </div>
             </div>
 
@@ -730,19 +732,19 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6">
+                <!-- <div class="col-lg-3 col-md-6">
                     <div class="info-box  mb-4">
                         <i class="bx bx-phone-call"></i>
-                        <!-- <h3>Call Us</h3> -->
+                        <h3>Call Us</h3>
                         <p>+91 80768 89032</p>
                     </div>
-                </div>
+                </div> -->
 
             </div>
 
             <div class="row justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="100">
                 <div class="col-lg-6">
-                    <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                    <form id="my_form" onsubmit="submitForm(); return false;" class="php-email-form">
                         <div class="form-row">
                             <div class="col form-group">
                                 <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
@@ -758,7 +760,7 @@
                             <div class="validate"></div>
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message" id="message"></textarea>
                             <div class="validate"></div>
                         </div>
                         <div class="mb-3">
@@ -766,8 +768,16 @@
                             <div class="error-message"></div>
                             <div class="sent-message">Your message has been sent. Thank you!</div>
                         </div>
-                        <div class="text-center"><button type="submit">Send Message</button></div>
+                        <div class="text-center">
+                            <p><input id="mybtn" type="submit" value="Submit Form"> <span id="status"></span></p>
+                        </div>
                     </form>
+                    <!-- <form id="my_form" onsubmit="submitForm(); return false;">
+                        <p><input id="n" placeholder="Name" required></p>
+                        <p><input id="e" placeholder="Email Address" type="email" required></p>
+                        <textarea id="m" placeholder="write your message here" rows="10" required></textarea>
+                        <p><input id="mybtn" type="submit" value="Submit Form"> <span id="status"></span></p>
+                    </form> -->
                 </div>
 
             </div>
@@ -806,17 +816,17 @@
                     <div class="col-lg-3 col-md-6 footer-contact">
                         <h3><br></h3>
                         <p>
-                            Aditya Mahajan <br> Vice-President <br><br>
-                            <strong>Phone:</strong> +91 98716 94151<br>
-                            <strong>Email:</strong> proVP@gmail.com<br>
+                            Praneet Sawhney <br> Vice-President <br><br>
+                            <strong>Phone:</strong> +91 76786 54450<br>
+                            <strong>Email:</strong> sawhneypraneet@gmail.com<br>
                         </p>
                     </div>
 
                     <div class="col-lg-3 col-md-6 footer-links">
                         <h4>Our Social Networks</h4>
                         <div class="social-links mt-3">
-                            <a href="https://www.instagram.com/minds.social/" class="instagram"><i class="bx bxl-instagram"></i></a>
                             <a href="https://www.linkedin.com/company/mindssocial/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                            <a href="https://www.instagram.com/minds.social/" class="instagram"><i class="bx bxl-instagram"></i></a>
                         </div>
                     </div>
 
@@ -842,7 +852,7 @@
     <script src="assets/vendor/jquery/jquery.min.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
     <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
     <script src="assets/vendor/counterup/counterup.min.js"></script>
     <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
