--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="row">
             <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-                    <div class="icon"><i class="bx bx-world"></i></div>
+                    <div class="icon"><i class="bx bx-network-chart"></i></div>
                     <h4 class="title"><a href="">Networking</a></h4>
                     <p class="description">Expand personal network and leverage M.I.N.D.S.' reach to accelerate your career journey.</p>
                 </div>
@@ -130,7 +130,7 @@
 
             <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
-                    <div class="icon"><i class="bx bx-planet"></i></div>
+                    <div class="icon"><i class="bx bx-rupee"></i></div>
                     <h4 class="title">
                         <a href="">Cost-Free Association</a>
                     </h4>
@@ -140,7 +140,7 @@
 
             <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
-                    <div class="icon"><i class="bx bx-network-chart"></i></div>
+                    <div class="icon"><i class="bx bxs-component"></i></div>
                     <h4 class="title"><a href="">Distinct Features</a></h4>
                     <p class="description">A continuous learning avenue, cutting across different subjects and domains to provide quality mentorship.</p>
                 </div>
