Linked mail clients

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                     <div class="info-box  mb-4">
                         <i class="bx bx-envelope"></i>
                         <!-- <h3>Email Us</h3> -->
-                        <p>networkingwithminds@gmail.com</p>
+                        <p><a href="mailto:networkingwithminds@gmail.com" style="color: black;">networkingwithminds@gmail.com</a></p>
                     </div>
                 </div>
 
