--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="assets/img/M.png" rel="icon">
-    <link href="assets/img/M.png" rel="apple-touch-icon">
+    <link href="assets/img/Blue Logo.png" rel="icon">
+    <link href="assets/img/Blue Logo.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,200&display=swap" rel="stylesheet">
@@ -39,7 +39,7 @@
                 <i class="icofont-phone"></i> +91 80768 89032
             </div>
             <div class="social-links">
-                <a href="https://www.linkedin.com/company/mindssocial/" class="linkedin"><i class="icofont-linkedin"></i></i></a>
+                <a href="https://www.linkedin.com/company/mindssocial/" class="linkedin" target="_blank"><i class="icofont-linkedin"></i></i></a>
                 <a href="https://www.instagram.com/minds.social/" class="instagram"><i class="icofont-instagram"></i></a>
             </div>
         </div>
